<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Riders</string>
    <string name="action_settings">Settings</string>
    <string name="btnRuta">Seleccionar punto de inicio</string>
    <string name="btnRuta2">Trazar Puntos Importantes </string>
    <string name="description">Descripción</string>
    <string name="horaInicio">Hora de inicio</string>
    <string name="horaReunion">Hora de Reunión</string>
    <string name="fecha">Fecha</string>
    <string name="nombreRuta">Nombre de la Ruta</string>
    <string name="create">Crear</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="open">Abierto</string>
    <string name="close">Cerrado</string>
    <string name="password">Contraseña</string>
    <string name="filter">Filtros</string>
    <string name="location">Ubicación</string>
    <string name="vermas">Ver más</string>
    <string name="search">Buscar</string>
    <string name="filtrar">Filtrar</string>
    <string name="ver">Ver</string>
    <string name="option">Opción</string>
    <string name="name">Nombre:</string>
    <string name="unirse">Unirse</string>
    <string name="text">nombre de la ruta</string>
    <string name="nombreP">Nombre Participante</string>
    <string name="asistira">Asisitira</string>
    <string name="talvez">Tal vez </string>
    <string name="cofAdmin">SI </string>
    <string name="noAdmin">NO </string>
    <string name="asistencia">Asistencia</string>
    <string name="administrador">Admin</string>
    <string name="nombre">Participante</string>
    <string name="participantes">Participantes</string>
    <string name="usuario">Usuario</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="nameRuta">Nombre de la ruta</string>
    <string name="datos">Datos</string>
    <string name="title_activity_maps" tools:ignore="ExtraTranslation">Map</string>
    <string name="reunion">REUNION</string>
    <string name="puntode">PUNTO DE</string>
    <string name="satelite">Satelite</string>
    <string name="hibrido">Hibrido</string>
    <string name="registrarse">Registrarse</string>
    <string name="sincuenta">No tienes una cuenta?</string>
    <string name="recordarcuenta">Recordar mi cuenta</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="contraseña">Contraseña</string>
    <string name="registrate">REGISTRATE</string>
    <string name="correo">Correo electrónico</string>
    <string name="unirseariderchile">Unirse a Riders Chile</string>
    <string name="accederalmapa">Acceder al mapa</string>
    <string name="volveratras">Volver atrás</string>
    <string name="title_activity_trazar_puntos">Map</string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="Unirse">Selecciona tu Ruta</string>
    <string name="Rutas">Rutas</string>
    <string name="title_activity_punto_reunion">Map</string>

</resources>

