<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/SeaGreen"
        android:orientation="vertical"
        tools:context=".Registro">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0"
            android:paddingBottom="30dp">
            <TextView
                android:id="@+id/titulo_reg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/registrate"
                android:textAlignment="center"
                android:textSize="50sp"
                android:fontFamily="@font/masterplan2"
                android:textColor="@color/Black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0">




            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/mail_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColorHint="@color/White"


                >

                <EditText
                    android:id="@+id/nuevo_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:shadowColor="#000000"
                    android:singleLine="true"
                    android:textColor="#000000"
                    />


            </com.google.android.material.textfield.TextInputLayout
                >

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/pass_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColorHint="@color/White"

                >

                <EditText
                    android:id="@+id/nuevo_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword"
                    android:shadowColor="#000000"
                    android:singleLine="true"
                    android:textColor="#000000"
                    />


            </com.google.android.material.textfield.TextInputLayout
                >





        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/registroBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:text="@string/unirseariderchile"
                android:textColor="#FFFFFF"
                android:background="@drawable/boton"
                />
            <Button
                android:id="@+id/btncancelarRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:text="@string/cancelar"
                android:textColor="#FFFFFF"
                android:background="@drawable/boton"
                />


        </LinearLayout>



    </LinearLayout>