<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".descripcionRuta">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lila1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="6"
            android:background="@color/SeaGreen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="NOMBRE DE RUTA"
                    android:textColor="@color/Black"
                    android:fontFamily="@font/masterplan2"
                    android:textSize="60dp"
                    />
            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/lititle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/lila2">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
                <!-- android:text="@string/nameRuta" -->
                <Button
                    android:id="@+id/corazon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="300dp"
                    android:background="@drawable/setting" />



            </LinearLayout>


        </LinearLayout>


        <ImageView
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_margin="20dp"
            android:paddingStart="30sp"
            android:paddingEnd="30sp"
            android:src="@drawable/mapa3">

        </ImageView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/li6">


            <TextView
                android:id="@+id/titledata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datos"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/li3"
                android:layout_margin="20dp">

                <LinearLayout
                    android:id="@+id/li4"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/fecha" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/location" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/horaReunion" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/horaInicio" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/li5"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/fecha" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/location" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/horaReunion" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/horaInicio" />
                </LinearLayout>










            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/titleparticipantes"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participantes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addPartcipante"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="130dp"
                android:background="@drawable/boton"
                android:text="+ añadir" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/liparticipantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@color/Bisque"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/asistencia"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableparticipantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/asistencia"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/nombreP" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/nombreP" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/nombreP" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/nombreP" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/asistencias"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/asistira" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/asistira" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/asistira" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/talvez" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>




    </LinearLayout>








</ScrollView>